# proactive-ai

./: .env.example  .gitignore  README.md  docker-compose.yml  implementation-plan.md  pyproject.toml
client/: index.html
scripts/: create_partitions.py  download_piper_voice.sh  enroll_user.py  migrate.py  register_tools.py
server/: cleanup.py  config.py  main.py  test_server.py  token_counter.py
server/action/: proactive_graph.py  reactive_graph.py  shared_nodes.py  state.py
server/ambient/: context_writer.py  cost_governor.py  memory_writer.py  processor.py
server/db/: postgres.py  redis.py
server/embeddings/: client.py  factory.py  google.py
server/llm/: client.py  factory.py  openrouter.py
server/pipeline/: audio_gain.py  audio_resampler.py  audio_segmenter.py  session_router.py  speaker_embedder.py  stt_processor.py  utterance_queue.py  vad_processor.py  voiceprint_matcher.py
server/prompts/: action.py  ambient.py  stt.py  tools.py
server/stt/: client.py  factory.py  gemini.py
server/tools/: executor.py  manifest.py  registry.py  selector.py
server/tts/: client.py  factory.py  gemini.py  piper.py
tests/: test_ambient_processor.py  test_audio_gain.py  test_context_writer.py  test_memory_writer.py  test_proactive_graph.py  test_reactive_graph.py  test_router.py  test_segmenter.py  test_stt.py  test_tool_executor.py  test_tool_selector.py  test_utterance_queue.py  test_vad.py  test_voiceprint.py
tests/fixtures/: generate_test_audio.py  mock_mcp_server.py  mock_tools.json
